safari:issues-alignment

--- a/static/scss/dashboard.scss
+++ b/static/scss/dashboard.scss
@@ -458,7 +458,7 @@ $button-border-color: #8f8a8a;
 				padding-top: 5px;
 				padding-left: 10px;
 				img{
-					width: 80px;
+					width: 85px;
 				    height: 80px;
 					object-fit: cover;
 					display: table-cell;
